style: fix filter  button styling on mobile

--- a/Frontend/src/pages/Templates/template.style.scss
+++ b/Frontend/src/pages/Templates/template.style.scss
@@ -42,6 +42,8 @@
   .filter-btn {
     font-size: 0;
     padding: 2px 8px;
+    width: 46px;
+    height: 22.8px;
     position: absolute;
     top: 0;
     border: 1px solid transparent;
